# BuildSystems

HW/: CMakeLists.txt
HW/A/: CMakeLists.txt  preparing.py
HW/B/: CMakeLists.txt  lib.cpp
HW/C/: CMakeLists.txt  main.cpp  main.h  main_test.cpp  test.cpp
